# snake-diffusion

./: .gitignore  pyproject.toml
snake_diffusion/: dweam.toml  dweam_game.py  generate_dataset.py  train.py
snake_diffusion/thumbnails/: snake.webm
snake_diffusion/training_data/: actions
src/: q_agent.py
src/training_utils/: train_loop.py
